--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,15 @@
 # Custom for Visual Studio
 *.cs     diff=csharp
 
+# Custom for PowerShell and PowerShell Studio
+*.ps1 text eol=crlf
+*.psm1 text eol=crlf
+*.psd1 text eol=crlf
+*.psproj text eol=crlf
+*.psf text eol=crlf
+*.pss text eol=crlf
+*.psbuild text eol=crlf
+
 # Standard to msysgit
 *.doc	 diff=astextplain
 *.DOC	 diff=astextplain
